--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
 <app-header />
-<header class="relative py-32 px-6">
-    <div class="relative z-10 max-w-7xl mx-auto text-center">
-        <div class="relative z-10">
-            <h1 class="text-6xl font-extrabold mb-4 text-gray-700 dark:text-emerald-600">SOFTWARE DEVELOPER</h1>
-            <p class="text-3xl mb-6 font-bold">Irving Armando Martínez Torres</p>
-            <div class="flex justify-center items-center gap-4">
-                <badge/>
-            </div>
+<header class="py-32 px-6">
+    <div class="max-w-7xl mx-auto text-center">
+        <div>
+            <h1 class="text-6xl font-extrabold mb-4 text-emerald-900 dark:text-emerald-600">SOFTWARE DEVELOPER</h1>
+            <p class="text-3xl mb-6 font-bold text-gray-700 dark:text-gray-200">Irving Armando Martínez Torres</p>
+            <badge />
         </div>
     </div>
 </header>
+<about-me/>
